--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ font-family: 'Open Sans Condensed', sans-serif;
         <span id="block">
             <a style="color: Tomato;" href="https://github.com/AkiXoverse"><i class="fab fa-github fa-2x"></i></a>
         </span>
+        <span id="block">
+            <a style="color: Tomato;" href="https://music.akii.fr"><i class="fab fa-soundcloud fa-2x"></i></a>
+        </span>
 
     </span>
 
