--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                             <ul class="navbar-nav text-uppercase">
                                 <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
+                                    <a class="nav-link tm-nav-link" href="https://akii.fr">Home</a>
                                 </li>
                                 <li class="nav-item active">
                                     <a class="nav-link tm-nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
