--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                                     <a class="nav-link tm-nav-link" href="about">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="https://akii.sellix.io">Services</a>
+                                    <a class="nav-link tm-nav-link" target="_blank" rel="noopener noreferrer" href="https://akii.sellix.io">Services</a>
                                 </li>                            
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="https://discord.gg/zZhbnagg2s">Contact</a>
+                                    <a class="nav-link tm-nav-link" target="_blank" rel="noopener noreferrer" href="https://discord.gg/zZhbnagg2s">Contact</a>
                                 </li>
                             </ul>                            
                         </div>                        
