--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                                     <a class="nav-link tm-nav-link" href="https://akii.fr">Home</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link tm-nav-link" href="about">About <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" target="_blank" rel="noopener noreferrer" href="https://akii.sellix.io">Services</a>
