--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Bievenue, ici vous pouvez retrouvez les produits de Akii ou des postes musculations ou divertissement ">
+    <meta name="author" content="Akii">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Akii.fr</title>
