--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Bievenue, ici vous pouvez retrouvez les produits de Akii ou des postes musculations ou divertissement ">
+    <meta name="author" content="Akii">
     <title>Akii.fr - About Page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" /> 
