--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             "class="fab fa-youtube"></a></li>
             <li><a href="https://github.com/AkiXoverse"class="fab fa-github"></a></li>
             <li><a href="https://www.twitch.tv/aki38_"class="fab fa-twitch"></a></li>
-            <li><a href="https://instagram.com/johan38570"class="fab fa-instagram"></a></li>
+            <li><a href="https://instagram.com/_johan38_"class="fab fa-instagram"></a></li>
           </ul>
         </div>
         
@@ -38,7 +38,7 @@
         <h2>Here's who I am & what I do</h2>
         <div class = "about-btns">
           <a href="https://github.com/AkiXoverse" type = "button" class = "btn btn-pink">Github</a>
-          <a href="https://instagram.com/johan38570" type = "button" class = "btn btn-white">Instagram</a>
+          <a href="https://instagram.com/_johan38_" type = "button" class = "btn btn-white">Instagram</a>
         </div>
 
         <div class = "about-para">
