--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div>
             <div class = "shadow">
               <div class = "about-img">
-                <img src = "https://cdn.discordapp.com/attachments/921106244511608844/1008059238997839902/Screenshot_2022-08-13-17-00-51-455_com.snapchat.android_448.jpg" alt = "about image">
+                <img src = "https://cdn.discordapp.com/attachments/873214984899932171/1009632311014346853/unknown.png" alt = "about image">
               </div>
             </div>
 
